kubernetes/apps/default/calagopus/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calagopus
  namespace: default
  annotations:
    external-dns.kubernetes.io/target: "internal.ewatkins.dev"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "calagopus.ewatkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: calagopus
          port: 8000
